--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^3.0.1
   velocity_x: ^3.5.1
+  url_strategy : ^0.2.0
   http : ^0.13.4
 
 dev_dependencies:
